Correção nas moléculas

--- a/alzheimer-desc.html
+++ b/alzheimer-desc.html
@@ -97,7 +97,7 @@
                 <div class="col-xl-12">
                     <p align="justify">A Doença de Alzheimer é uma enfermidade incurável que se agrava ao longo do tempo, mas pode e deve ser tratada. Quase todas as suas vítimas são pessoas idosas.</p>
                     <p align="justify">São conhecidas algumas lesões cerebrais características dessa doença. As duas principais alterações que se apresentam são as placas senis decorrentes do depósito de proteína beta-amiloide, anormalmente produzida, e os emaranhados neurofibrilares, frutos da hiperfosforilação da proteína tau. Outra alteração observada é a redução do número das células nervosas (neurônios) e das ligações entre elas (sinapses), com redução progressiva do volume cerebral.</p>
-                    <p align="justify">Estima-se que existam no mundo cerca de 35,6 milhões de pessoas com a Doença de Alzheimer. No Brasil, há cerca de 1,2 milhão de casos, a maior parte deles ainda sem diagnóstico</p>
+                    <p align="justify">Estima-se que existam no mundo cerca de 35,6 milhões de pessoas com a Doença de Alzheimer. No Brasil, há cerca de 1,2 milhão de casos, a maior parte deles ainda sem diagnóstico.</p>
                     <p align="center"><strong><a href="http://abraz.org.br/" target="_blank">Fonte: Associação Brasileira de Alzheimer.</a></strong></p>
                     <img src="img/alzheimer.jpg" class="img-fluid" alt="">
                 </div>
