--- a/epilepsia-reagrama.html
+++ b/epilepsia-reagrama.html
@@ -144,7 +144,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-              <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida, <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia e <i class="fa fa-arrow-up" aria-hidden="true"></i> eficácia por se ligarem rapidamente no receptor.
+              Grupamento Fenil - <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida, <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia e <i class="fa fa-arrow-up" aria-hidden="true"></i> e confere propriedade anticonvulsionante.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -162,7 +162,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            Grupamento farmacóforo.
+            Grupamento farmacofórico.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -198,7 +198,7 @@
               </button>
             </div>
             <div class="modal-body text-center">
-              Grupamento farmacofórico.
+              Grupamento farmacofórico, anéis A e B.
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -216,7 +216,7 @@
                 </button>
               </div>
               <div class="modal-body text-center">
-                Grupamento farmacofórico.
+                C7 - dióxido de nitrogênio - <i class="fa fa-arrow-up" aria-hidden="true"></i> da Lipofila e tempo de &frac12; vida, <i class="fa fa-arrow-up" aria-hidden="true"></i> da atividade ansiolítica e <i class="fa fa-arrow-down" aria-hidden="true"></i> a excreção
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -234,7 +234,7 @@
                   </button>
                 </div>
                 <div class="modal-body text-center">
-                    <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida, <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia e <i class="fa fa-arrow-up" aria-hidden="true"></i> eficácia por se ligarem rapidamente no receptor.                    
+                  C2 - elemento eletronegativo - <i class="fa fa-arrow-up" aria-hidden="true"></i> da Lipofila e tempo de &frac12; vida. 
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -270,7 +270,7 @@
                     </button>
                   </div>
                   <div class="modal-body text-center">
-                    Grupamento Farmacóforo.
+                    Grupamento Farmacóforo, similar ao Gaba.
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
