--- a/esquizofrenia-reagrama.html
+++ b/esquizofrenia-reagrama.html
@@ -104,6 +104,7 @@
                       <area target="" alt="ClorpromazinaVerde" title="ClorpromazinaVerde" href="#!" coords="1182,314,1180,217,979,184,976,109,1068,113,1068,10,887,7,879,174,806,217,694,153,547,240,546,353,605,353,603,271,692,210,811,275,928,236,1025,299" shape="poly" onclick="ClorpromazinaVerde();">
                   </map>
                   <p><strong>Clorpromazina (Fenotiazídicos)</strong></p>
+                  <p style="color: #46f257"><strong>SINTOMAS POSITIVOS: SEDATIVOS</strong></p>
                 </div>
                 <div class="col-sm-6 text-center">
                   <img src="img/moleculas/clorprotixeno2.png" style="height: 200px; width: auto; margin-bottom: 10px;" class="img-fluid" alt="" usemap="#clorprotixeno-map">
@@ -114,11 +115,11 @@
                       </map>
                   </map>
                   <p><strong>Clorprotixeno (Tioxantenos)</strong></p>
+                  <p style="color: #46f257"><strong>SINTOMAS POSITIVOS: SEDATIVOS</strong></p>
                 </div>
               </div>
               <div class="row bg-white has-shadow">
                   <div class="col-sm-6 text-center">
-                      <p style="color: #fc1e0c"><strong>SINTOMAS NEGATIVOS: ATÍPICOS</strong></p>
                       <img src="img/moleculas/clozapina.png" style="height: 200px; width: auto; margin-bottom: 10px;" class="img-fluid" alt="" usemap="#clozapina-map">
                       <map name="clozapina-map">
                               <area target="" alt="ClozapinaAzul" title="ClozapinaAzul" href="#!" coords="8,675,98,764" shape="rect" onclick="ClozapinaAzul();">
@@ -127,9 +128,9 @@
                               <area target="" alt="ClozapinaVerde" title="ClozapinaVerde" href="#!" coords="1017,5,1193,120" shape="rect" onclick="ClozapinaVerde();">
                           </map>
                       <p><strong>Clozapina</strong></p>
+                      <p style="color: #fc1e0c"><strong>SINTOMAS NEGATIVOS: ATÍPICOS</strong></p>
                     </div>
                     <div class="col-sm-6 text-center">
-                        <p style="color: #46f257"><strong>SINTOMAS POSITIVOS: INCISIVOS</strong></p>
                         <img src="img/moleculas/haloperidol2.png" style="height: 200px; width: auto" class="img-fluid" alt="" usemap="#haloperidol-map">
                         <map name="haloperidol-map">
                           <area target="" alt="HaloperidolAzul" title="HaloperidolAzul" href="#!" coords="1103,14,1190,93" shape="rect" onclick="HaloperidolAzul();">
@@ -139,6 +140,7 @@
                           <area target="" alt="HaloperidolAzul2" title="HaloperidolAzul2" href="#!" coords="14,683,67,756" shape="rect" onclick="HaloperidolAzul();">
                         </map>
                         <p><strong>Haloperidol</strong></p>
+                        <p style="color: #46f257"><strong>SINTOMAS POSITIVOS: INCISIVOS</strong></p>
                       </div>
               </div>
             </div>
@@ -166,14 +168,14 @@
               </button>
             </div>
             <div class="modal-body text-center">
-                <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
+              Grupamento similar a Dopamina (3C), liga-se no receptor D2, essencial para atividade antipsicótica. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
             </div>
           </div>
+          </div>
         </div>
-      </div>
 
       <div class="modal fade" id="ClorpromazinaVermelho" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -184,7 +186,7 @@
                 </button>
               </div>
               <div class="modal-body text-center">
-                Grupamento Farmacóforo.
+                Grupamento Farmacóforo. <br> Molécula precisa estar na posição Cis.
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -202,51 +204,14 @@
                   </button>
                 </div>
                 <div class="modal-body text-center">
-                    Elementos eletronegativos, anel aromático. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofila e tempo de &frac12; vida.
-                </div>
+                    Elemento eletronegativo. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia. <br>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="modal fade" id="ClorpromazinaVerde" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body text-center">
-                      <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-      
-            <div class="modal fade" id="ClorpromazinaVermelho" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body text-center">
-                      Grupamento Farmacóforo.
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-      
+        </div>
               <div class="modal fade" id="ClorprotixenoAzul" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -256,7 +221,8 @@
                         </button>
                       </div>
                       <div class="modal-body text-center">
-                          Elementos eletronegativos, anel aromático. <br><i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofila e tempo de &frac12; vida.
+                          Elemento eletronegativo. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia. <br>
+                          -	Substituição na posição C10 do N pelo C, característica menos sedativa ao fármaco.
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -274,7 +240,7 @@
                               </button>
                             </div>
                             <div class="modal-body text-center">
-                                <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
+                                Grupamento similar a Dopamina (3C), liga-se no receptor D2, essencial para atividade antipsicótica. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -292,7 +258,7 @@
                                     </button>
                                   </div>
                                   <div class="modal-body text-center">
-                                      Grupamento Farmacóforo.
+                                      Grupamento Farmacóforo. <br> Molécula precisa estar na posição Cis.
                                   </div>
                                   <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -310,7 +276,7 @@
                                       </button>
                                     </div>
                                     <div class="modal-body text-center">
-                                        Grupamento Farmacóforo.
+                                        Grupamento Farmacofórico.
                                     </div>
                                     <div class="modal-footer">
                                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -328,7 +294,7 @@
                                         </button>
                                       </div>
                                       <div class="modal-body text-center">
-                                          Elementos eletronegativos, anel aromático. <br><i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofila e tempo de &frac12; vida.
+                                         <i class="fa fa-arrow-up" aria-hidden="true"></i> de Lipofilia.
                                       </div>
                                       <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -346,7 +312,7 @@
                                           </button>
                                         </div>
                                         <div class="modal-body text-center">
-                                            <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
+                                            <i class="fa fa-arrow-up" aria-hidden="true"></i> tempo de &frac12; vida.
                                         </div>
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -364,7 +330,7 @@
                                             </button>
                                           </div>
                                           <div class="modal-body text-center">
-                                              <i class="fa fa-arrow-up" aria-hidden="true"></i> Peso.
+                                              Anel piperazina, <i class="fa fa-arrow-up" aria-hidden="true"></i> de peso, com uso continuo leva a obesidade, <i class="fa fa-arrow-up" aria-hidden="true"></i> do colesterol, levando a problemas cardíacos. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
                                           </div>
                                           <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -382,7 +348,7 @@
                                               </button>
                                             </div>
                                             <div class="modal-body text-center">
-                                              Grupamento volumosos, aumento de lipofilia e tempo de meia vida.
+                                              Grupamento volumosos, <i class="fa fa-arrow-up" aria-hidden="true"></i> de lipofilia e tempo de &frac12; vida.
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -418,7 +384,7 @@
                                               </button>
                                             </div>
                                             <div class="modal-body text-center">
-                                              Elementos eletronegativos, anel aromático – aumento de lipofila e tempo de meia vida.
+                                              Elementos eletronegativos, anel aromático. <br> <i class="fa fa-arrow-up" aria-hidden="true"></i> de lipofila e tempo de &frac12; vida.
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
