--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
     </div>
   </div>
-
+<!-- http://quimicafarmaceutica.com.br/home.html -->
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/jquery.cookie.js"></script>
@@ -124,7 +124,7 @@
     function logar() {
       if ($('#password').val() == "qf2") {
         $.cookie("logado", "true");
-        window.location.assign("http://quimicafarmaceutica.com.br/home.html");
+        window.location.assign("http://localhost/qf2/home.html");
         return false;
       } else {
         $('#feedback').css('display', 'block');
