--- a/alzheimer-reagrama.html
+++ b/alzheimer-reagrama.html
@@ -146,7 +146,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            Grupamento volumoso <i class="fa fa-arrow-up" aria-hidden="true"></i> Lipofilia.
+            Anel Aromático - Grupamento volumoso <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -182,7 +182,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-              <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
+              Metilação - <i class="fa fa-arrow-up" aria-hidden="true"></i> do tempo de &frac12; vida e Lipofilia.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -200,7 +200,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            Grupamento volumosos, aumento de lipofilia e tempo de meia vida.
+            Grupamento volumosos, aumento de lipofilia e tempo de &frac12; vida.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -236,7 +236,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            Elementos eletronegativos, anel aromático – aumento de lipofila e tempo de meia vida.
+            Elementos eletronegativos, anel aromático – <i class="fa fa-arrow-up" aria-hidden="true"></i> de lipofila e tempo de &frac12; vida.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
