--- a/epilepsia-reagrama.html
+++ b/epilepsia-reagrama.html
@@ -114,7 +114,7 @@
                       <area target="" alt="ClonazepamLaranja" title="ClonazepamLaranja" href="#!" coords="401,505,313,557,305,649,51,653,46,510,279,500,368,458" shape="poly" onclick="ClonazepamLaranja();">
                       <area target="" alt="ClonazepamAzul" title="ClonazepamAzul" href="#!" coords="1024,758,1163,886" shape="rect" onclick="ClonazepamAzul();">
                       <area target="" alt="ClonazepamVerde" title="ClonazepamVerde" href="#!" coords="600,784,557,977,702,1114,890,1057,924,864,789,736" shape="poly" onclick="ClonazepamVerde();">
-                      <area target="" alt="ClonazepamVermelho" title="ClonazepamVermelho" href="#!" coords="765,40,759,201,686,261,540,187,361,290,363,440,413,518,542,589,688,506,818,607,1036,609,1087,387,1003,217,889,179,879,43" shape="poly" onclick="ClonazepamVerde();">
+                      <area target="" alt="ClonazepamVermelho" title="ClonazepamVermelho" href="#!" coords="765,40,759,201,686,261,540,187,361,290,363,440,413,518,542,589,688,506,818,607,1036,609,1087,387,1003,217,889,179,879,43" shape="poly" onclick="ClonazepamVermelho();">
                   </map>
                   <p><strong>Clonazepam (Benzodiazepínicos)</strong></p>
                 </div>
